# ntsc-rs

crates/ae-plugin/: Cargo.toml
crates/ae-plugin/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: expression_parser.rs
crates/gui/src/app/: error.rs  layout_helper.rs  main.rs  mod.rs  presets.rs  render_settings.rs  system_fonts.rs
crates/gui/src/gst_utils/: process_gst_frame.rs
crates/ntscrs/: Cargo.toml
crates/ntscrs/benches/: filter_profile.rs
crates/ntscrs/src/: ctx.rs  filter.rs  lib.rs  ntsc.rs  random.rs  shift.rs  thread_pool.rs  yiq_fielding.rs
crates/ntscrs/src/noise/: grid.rs  simplex.rs
crates/ntscrs/src/settings/: easy.rs  settings.rs  standard.rs
crates/openfx-plugin/: Cargo.toml
crates/openfx-plugin/src/: handle.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: build_ofx_plugin.rs  macos_bundle.rs
