[package]
name = "ntsc-rs"
version = "0.1.2"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/ntscrs"

[dependencies]
fearless_simd = { version = "0.4.1", default-features = false }
num_enum = { version = "0.7.5", default-features = false }
ntsc-rs-macros = {path = "../macros"}
hifijson = { version = "0.5", default-features = false, features = ["alloc"] }

rayon-core = { version = "1.13.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }

core_maths = { version = "0.1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png"] }

[features]
default = ["std"]
libm = ["fearless_simd/libm", "dep:core_maths"]
std = ["fearless_simd/std", "hifijson/std"]
rayon = ["std", "dep:rayon-core", "dep:num_cpus"]

[[bench]]
name = "filter_profile"
harness = false

[lints]
workspace = true
