[package]
name = "ntsc-rs-openfx-plugin"
version = "0.1.7"
edition = "2021"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/openfx-plugin"

[dependencies]
ntsc-rs = { path = "../ntscrs" }
rfd = "0.17"

[build-dependencies]
bindgen = "0.72"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
